# modal-playground

./: .gitignore  README.md  hello.py  pyproject.toml
assets/: example.jsonl
fim_eval/: app.py  constants.py  download_eval.py  download_model.py  evaluate_fim_results.py  execution.py  load_problems.py  main.py  result.py  run_with_transformers.py  run_with_vllm.py
scripts/: deepseek_transformers_fim.py  deepseek_vllm_fim.py  fim_eval.py  volumes.py  writing_results_locally.py
