[project]
name = "modal-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.28.1",
    "modal>=0.73.6",
    "numpy>=2.2.2",
    "requests>=2.32.3",
    "torch>=2.6.0",
    "transformers==4.44.2",
]
